pre23
 Fix RND select in CM
 Make StateTable discount as parameter
 All CM component mixer inputs tunable
pre22
 Add STA component for statetable generation (tunable)
 Use STA in DS,DHS,CM component if selected.
 In CM component add another mix without RND state select
pre21
 Add LMX tune command line option
 In CM component make another mixer input tunable
 Tune text, exe, im24 model parameters
bmp24
 Fix bmp24 detection.
models
 Update jpeg model, add prediction error as apm parameter
 Fix some models AVG parameters
pre21
 Cleanup
 Add UAS, ERR, TAPM command line parameters for option -2
pre20
 Add fs config using TAPM
pre19
 Add ERR,TAMP,UAS,LMX component
 Change lpaq1 config. Add sparse/indirect context, UAS and LMX
 -i option for some debug info
 nes rom detect
pre18
 Add APM2 component.
 Change DHS hash checksum calculation.
 Update jpeg.cfg/test3i4.cfg to work with new DHS.
 Add lpaq1 model.
pre17
 Remove BH class, move it to RunContextMap
 Cleanup.
pre16
 Enable command line opition j for JIT mode.
 Show most selected options at the start.
pre15
 Fix command line options.
pre14
 Move config files to dir. This allows to use multiple config files based on input.
pre13
 Add config file command line option
pre12
 Change StationaryMap,ContextMap
 Change jpeg.cfg/test3txt.cfg
jpg/text parameters
 -Change jpg/text parameters.
 -Add changelog
text enc/dec
 0e0d8cc
 Change text encode. Lower case conversion on most words
pre11
 019a9a7
 Make VM bounds checks as command line options.
pre10
 09d3312
 Fix test3exe.cfg, decompression was not identical. Local variables are random initzialized.
pre9
5a35ea8
 Change mixer prediction shift, adjust cfg files
 Add Sk component
 Use Sk in matchMod function in cfg files
 Adjust test3txt.cfg APM components
 Use Squash/Stretch from paq8px_v205
 Update help screen
pre8
 93c0c76
 Add parameter tuning for components
 Add StationaryMap component
 Fix memory leaks
 In cfg allow enum value used as array init value. Allow Or operator.