@@ -1,0 +1,7 @@
+stream 0
+model text\txtfast.cfg
+type 0
+detect -1
+decode -1
+encode -1
+compress 0
